2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkobject.c
	* gtk/gtksignal.[ch]: s/GtkType/GType/ and
	s/GtkSignalMarshaller/GSignalCMarshaller/.

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): remove unused
	variable and fix indentation.

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkclist.h
	* gtk/gtkctree.h
	* gtk/gtklist.h
	* gtk/gtklistitem.h
	* gtk/gtkobject.h
	* gtk/gtkoldeditable.h
	* gtk/gtkpixmap.h
	* gtk/gtkpreview.h
	* gtk/gtktext.h
	* gtk/gtktipsquery.h
	* gtk/gtktree.h
	* gtk/gtktreeitem.h: get rid of GtkType and GTK_CHECK_FOO() also
	in all deprecated headers.

2008-09-22  Matthias Clasen  <mclasen@redhat.com>

	Bug 553135 – eog crash: assertion failed. Gtk error:
	shortcuts_remove_rows: code should not be reached

	* gtk/gtkfilechooserdefault.c: Disconnect from GtkFileSystem 
	signals when we are destroyed, in order to avoid nasty surprises.
	Patch by Claudio Saavedra

2008-09-22  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 552789 – Show size column in the search and recently used
	files modes

	* gtk/gtkfilechooserdefault.c: Display the file size column
	when in OPERATION_MODE_SEARCH. This removes a stat() call
	and simplifies the code a little bit by changing the query
	for file informations for each search engine hit.

2008-09-22  Michael Natterer  <mitch@imendio.com>

	* gtk/gtksignal.[ch]
	* gtk/gtkclist.c
	* gtk/gtklist.c
	* gtk/gtkmain.c
	* gtk/gtktext.c
	* gtk/gtktreeitem.c: use G_CALLBACK and GCallback instead of
	GTK_SIGNAL_FUNC and GtkSignalFunc also in deprecated code.

2008-09-22  Frederic Crozat  <fcrozat@mandriva.com>

	* gtk/gtkfilesystem.c: use the correct gi18n header.
	Fixes bug #553000.

2008-09-22  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktoolbar.[ch]: add "Deprecated: 2.4" to all the deprecated
	append(), prepend() and insert() functions and recommend to use
	gtk_toolbar_insert() instead. Use GCallback instead of